# backend-prueblo-madera

./: pyproject.toml  requirements.txt
backend/: settings.py  urls.py
inventario/: admin.py  models.py  serializers.py  urls.py  views.py
inventario/migrations/: 0001_initial.py  0002_remove_material_unidad.py  0003_material_unidad.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
